--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Inspirova</title>
+
+    <!-- Favicon: ICO format for better browser support -->
+    <link rel="icon" href="/fav.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
